Update Martin's email address References #898 for GEOS 3.7

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@ over the world.
 
 Developers and Project Steering Committee (PSC):
 Active:
-  Martin Davis (mbdavis@refractions.net)(PSC) - Architecture
+  Martin Davis (mtnclimb at gmail.com )(PSC) - Architecture
   Sandro Santilli (strk@kbt.io) (PSC Chair) - Bug Fixing / Maintenance
   Paul Ramsey (pramsey@cleverelephant.ca) (PSC) - Coordination / Build
   Regina Obe (lr@pcorp.us) (PSC) - QA / Windows / Coordination
