--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,16 @@
+Changes in 3.7.0rc1
+2018-08-19
+Fixes / enhancements since 3.7.0beta2
+  - Avoid segfault when querying empty tree (#730, framm)
+  - Collection with Empty components crashes overlay (#782, Dan Baston)
+  - Allow static library with C API for CMake builds (#878, Dakota Hawkins)
+
+
 Changes in 3.7.0beta2
 2018-08-06
 Fixes since 3.7.0beta1
   - Fix infinite loop in GEOSClipByRect (#865, Dan Baston)
-  - Make GEOSException inherit from std::runtime_error 
+  - Make GEOSException inherit from std::runtime_error
     to address clang warnings (Dan Baston)
   - Add missing CMake files to tarball (#895, Regina Obe)
 
