--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Changes in 3.7.1
     (#927, Sergey Fedoseev)
   - Fix crash in GEOSInterpolate with empty LineString
     (#926, Sergey Fedoseev)
+  - Fix crash in GEOSUnaryUnion with empty LineString
+    (#928, Sergey Fedoseev)
 
 
 3.7.0 changes
