--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Changes in 3.7.2
 
 - Bug fixes / improvements
   - Envelope constructor using strtod (#875 Paul Ramsey)
+  - Failure in CMake for OSX Framework (#936 Paul Ramsey)
 
 
 
