--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ Changes in 3.5.3
 
 -Bug fixes / improvements
   - Fix crash in GEOSUnaryUnion with empty LineString (#928, Sergey Fedoseev)
+  - Polygon build failure in Overlay difference (#789 Paul Ramsey)
+
 
 Changes in 3.5.2
 2018-08-06
