Static library does not contain C API Closes #878

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Changes in 3.6.4
   - Envelope constructor use strtod (#875)
   - Polygon build failure in Overlay difference (#789 Paul Ramsey)
   - Invalid union result from valid polygon inputs (#838)
+  - Static library does not contain C API (#878)
 
 
 Changes in 3.6.3
