--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,9 @@ Fixes since 3.7.0beta1
     to address clang warnings (Dan Baston)
   - Add missing CMake files to tarball (#895, Regina Obe)
 
-3.7.0 changes
+Changes in 3.7.0
+2018-09-10
+
 - New things:
   - CAPI: GEOSDistanceIndexed (#795, Dan Baston)
   - CAPI: GEOSCoordSeq_isCCW (#870, Dan Baston)
