--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Changes in 3.7.2
-2018-05-02
+2019-XX-XX
+
+- Bug fixes / improvements
+  -
+
+
+Changes in 3.7.2
+2019-05-02
 
 - Bug fixes / improvements
   - Envelope constructor using strtod (#875 Paul Ramsey)
