--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,16 @@ Changes in 3.8.0
   - Improve performance and robustness of GEOSPointOnSurface (Martin Davis)
 
 
+Changes in 3.7.2
+2019-05-02
+
+- Bug fixes / improvements
+  - Envelope constructor using strtod (#875 Paul Ramsey)
+  - Failure in CMake for OSX Framework (#936 Paul Ramsey)
+  - Polygon build failure in Overlay difference (#789 Paul Ramsey)
+  - Invalid union result from valid polygon inputs (#838)
+
+
 Changes in 3.7.1
 2018-11-29
 
