--- a/NEWS
+++ b/NEWS
@@ -5,11 +5,14 @@ Changes in 3.8.0
   - CAPI: GEOSBuildArea (#952, Even Rouault)
   - CAPI: GEOSMakeValid (#952, Even Rouault)
   - CAPI: GEOSPolygonize_valid (#727, Dan Baston)
+  - CAPI: GEOSCoverageUnion (Dan Baston)
 
 - Improvements:
   - Improve performance and robustness of GEOSPointOnSurface (Martin Davis)
   - Improve performance of GEOSPolygonize for cases with many potential
     holes (#748, Dan Baston)
+  - Improve performance of GEOSPolygonize for cases with many or complex
+    shells (Dan Baston, Martin Davis)
 
 
 Changes in 3.7.2
