--- a/NEWS
+++ b/NEWS
@@ -42,6 +42,7 @@ Changes in 3.7.0
           GEOSGeom_getYMin, GEOSGeom_getYMax (#871, Dan Baston)
   - CAPI: GEOSFrechetDistance (#797, Shinichi SUGIYAMA)
   - CAPI: GEOSReverse (#872, Dan Baston)
+  - CAPI: GEOSSegmentIntersection (#873, Dan Baston)
   - CAPI: GEOSGeomGetZ (#581, J Smith)
 
 - Improvements
