--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Changes in 3.7.3dev
 2019-XX-XX
 
 - Bug fixes / improvements
-  -
+  - Union performance regression (#867 Paul Ramsey)
 
 
 Changes in 3.7.2
