--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,9 @@ Changes in 3.8.0
     holes (#748, Dan Baston)
   - Improve performance of GEOSPolygonize for cases with many or complex
     shells (Dan Baston, Martin Davis)
+  - Improve performance of Delaunay triangulations / Voronoi Diagrams
+    (Dan Baston)
+  - Improve robustness of Delaunay triangulations (Paul Ramsey, Martin Davis)
 
 
 Changes in 3.7.2
