--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Changes in 3.6.4
   - Polygon build failure in Overlay difference (#789 Paul Ramsey)
   - Invalid union result from valid polygon inputs (#838)
   - Static library does not contain C API (#878)
+  - Prevent crash when querying empty STRtree (#730)
 
 
 Changes in 3.6.3
