Use std::array instead of std::vector in TopologyLocation.cpp, for performance improvement in overlay operations.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Changes in 3.7.3dev
 
 - Bug fixes / improvements
   - Union performance regression (#867 Paul Ramsey)
+  - Overlay performance improvement (Paul Ramsey)
 
 
 Changes in 3.7.2
