Port JTS improvements to cascaded union. New approach to overlap handling, to deal with robustness issues while preserving more performance than the old GEOS fix. Add in fallback to buffer(0) when unary union fails, for more fault tolerance on hard cases. Apply some const correctness features when building geometries from vector<const *Geometry>, as many constructors must do (from @dbaston)
https://github.com/locationtech/jts/pull/470
https://github.com/locationtech/jts/pull/429

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ Changes in 3.8.0
     (Dan Baston)
   - Improve robustness of Delaunay triangulations (Paul Ramsey, Martin Davis)
   - Improve overlay performance (Paul Ramsey)
+  - Improve cascaded union performance (Paul Ramsey, Martin Davis)
 
 
 Changes in 3.7.2
