Add news message

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.7.3dev
 - Bug fixes / improvements
   - Union performance regression (#867, Paul Ramsey)
   - Overlay performance improvement (#986, Paul Ramsey)
+  - Allocate default geometryfactory on the stack (#714)
 
 
 Changes in 3.7.2
