Add NEWS entries

--- a/NEWS
+++ b/NEWS
@@ -18,9 +18,12 @@ Changes in 3.8.0
   - Improve performance of Delaunay triangulations / Voronoi Diagrams
     (Dan Baston)
   - Improve robustness of Delaunay triangulations (Paul Ramsey, Martin Davis)
-  - Improve overlay performance (Paul Ramsey)
+  - Improve overlay and buffer performance (Paul Ramsey)
   - Improve cascaded union performance (Paul Ramsey, Martin Davis)
   - Allocate default GeometryFactory singleton on the stack (Sandro Mani)
+  - Harmonize XML tests with JTS and harmonize cmake/autoconf
+    test running (Paul Ramsey)
+  - CMake modernization (Mateusz Loskot)
 
 
 Changes in 3.7.2
