--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Changes in 3.7.3dev
-2019-XX-XX
+Changes in 3.7.3
+2019-10-04
 
 - Bug fixes / improvements
   - Union performance regression (#867, Paul Ramsey)
