Avoid access past end of vector
In most configurations this access would be optimized out (as it is
never used) but this is not always the case.

Fixes #1002

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Changes in 3.8.1
 
 - Bug fixes / improvements
   - Stack allocate line segments in OverlapUnion (Paul Ramsey)
+  - Avoid assertion failure with MSVC 2017 / 2019 (#1002, Dan Baston)
 
 
 Changes in 3.8.0
