Avoid MonotoneChain self-compare in SimpleMCSweepLineIntersector
This is a hotspot in validity profiling. This commit reduces the runtime
of GEOSisValid from 3.7s to 2.0s for the 5,489 polygons in the
HydroBASINS level 5 dataset, and from 610ms to 360ms for the individual
polygon components of the boundary of Australia in the GADM country
dataset.

--- a/NEWS
+++ b/NEWS
@@ -2,10 +2,11 @@ Changes in 3.9.0
 2020-xx-xx
 
 - New things:
-  - 
+  -
 
 - Improvements:
   - Stack allocate segments in OverlapUnion (Paul Ramsey)
+  - Improve performance of GEOSisValid (Dan Baston)
 
 
 Changes in 3.8.0
