--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ Changes in 3.8.1
     (#1001, Dan Baston)
   - Avoid assertion failure with MSVC 2017 / 2019 (#1002, Dan Baston)
   - Remove whitespace from end of GEOSversion() output (azhi)
-
+  - Improve performance of GEOSisValid (#1008, Dan Baston)
 
 Changes in 3.8.0
 2019-10-10
