Retain component order in MultiLineString::reverse
Updated for consistency with the behavior of other geometry types (as
changed in https://github.com/locationtech/jts/pull/513)

Fixes #1013

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ Changes in 3.7.3dev
 - Bug fixes / improvements
   - Union performance regression (#867, Paul Ramsey)
   - Overlay performance improvement (#986, Paul Ramsey)
+  - Avoid changing MultiLineString component order in GEOSReverse
+    (#1013, Dan Baston)
 
 
 Changes in 3.7.2
