news entry for ttmath retirement

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ Changes in 3.9.0
     and escape paths (https://git.osgeo.org/gitea/geos/geos/pulls/99) 
     changes mostly affect CMake MSVC builds (#1015, Mike Taves)
   - Testing on Rasberry Pi 32-bit (berrie) (#1017, Bruce Rindahl, Regina Obe)
+  - Replace ttmath with JTS DD double-double implementation (Paul Ramsey)
 
 
 Changes in 3.8.0
