--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,9 @@ Changes in 3.8.2
 2020-xx-xx
 
 - Bug fixes / improvements
-  - 
+  - DistanceOp against geometry with empty components 
+    crashes (#1026, Paul Ramsey)
+
 
 Changes in 3.8.1
 2020-03-10
