--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.8.2
     crashes (#1026, Paul Ramsey)
   - Remove undefined behaviour in CAPI (#1021, Greg Troxel)
   - WKT writing of MULTIPOINT with EMPTY component crash (#1027, Paul Ramsey)
+  - Fix buffering problem (#1022, JTS-525, Paul Ramsey)
 
 
 Changes in 3.8.1
