Expose "precise" overlay CAPI functions
Provide "Prec" suffixed functions for all overlay ops, having
them call OverlayNGSnapIfNeeded when passed a gridSize=0 and
precision-mediated OverlayNG otherwise.

Enable existing GEOSUnion test
Add GEOSUnionPrec and GEOSIntersectionPrec tests

Includes NEWS entry

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,8 @@ Changes in 3.9.0
 2020-xx-xx
 
 - New things:
-  -  MaximumInscribedCircle and LargestEmptyCircle (JTS-530, Paul Ramsey)
+  - MaximumInscribedCircle and LargestEmptyCircle (JTS-530, Paul Ramsey)
+  - CAPI: Fixed precision overlay operations (Sandro Santilli, Paul Ramsey)
 
 - Improvements:
   - Stack allocate segments in OverlapUnion (Paul Ramsey)
