--- a/NEWS
+++ b/NEWS
@@ -2,11 +2,13 @@ Changes in 3.8.2
 2020-xx-xx
 
 - Bug fixes / improvements
-  - DistanceOp against geometry with empty components 
+  - DistanceOp against geometry with empty components
     crashes (#1026, Paul Ramsey)
   - Remove undefined behaviour in CAPI (#1021, Greg Troxel)
   - WKT writing of MULTIPOINT with EMPTY component crash (#1027, Paul Ramsey)
   - Fix buffering problem (#1022, JTS-525, Paul Ramsey)
+  - Fix segfault in GEOSInterpolate against empty eollections (#1055,
+    Sandro Santilli)
 
 
 Changes in 3.8.1
