Add GEOSPreparedNearestPoints in C-API
Implement for LineString input

Closes #1007

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.9.0
 - New things:
   - MaximumInscribedCircle and LargestEmptyCircle (JTS-530, Paul Ramsey)
   - CAPI: Fixed precision overlay operations (Sandro Santilli, Paul Ramsey)
+  - CAPI: GEOSPreparedNearestPoints (#1007, Sandro Santilli)
 
 - Improvements:
   - Stack allocate segments in OverlapUnion (Paul Ramsey)
