SimpleSTRtree implementation. Functionally the same as STRtree, but without the extra layer of abstraction with AbstractSTRtree. Take advantage of simpler inheritance to also avoid heap allocations, and to store node envelope information close together and promote memory locality, hopefully better CPU efficiency and cache coherence.

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.9.0
   - CAPI: Fixed precision overlay operations (Sandro Santilli, Paul Ramsey)
   - CAPI: GEOSPreparedNearestPoints (#1007, Sandro Santilli)
   - CAPI: GEOSPreparedDistance (#1066, Sandro Santilli)
+  - SimpleSTRTree spatial index implementation (Paul Ramsey)
 
 - Improvements:
   - Stack allocate segments in OverlapUnion (Paul Ramsey)
