--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Changes in 3.9.0
-2020-xx-xx
+Changes in 3.9.0beta1
+2020-11-27
 
 - New things:
   - MaximumInscribedCircle and LargestEmptyCircle (JTS-530, Paul Ramsey)
@@ -7,7 +7,6 @@ Changes in 3.9.0
   - CAPI: GEOSPreparedNearestPoints (#1007, Sandro Santilli)
   - CAPI: GEOSPreparedDistance (#1066, Sandro Santilli)
   - SimpleSTRTree spatial index implementation (Paul Ramsey)
-  - SimpleSTRTree used for C API (Paul Ramsey)
   - Add support for pkg-config for GEOS C API (#1073, Mike Taves)
 
 - Improvements:
