--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 Changes in 3.6.4
-2018-XX-XX
+2020-XX-XX
 
 - Bug fixes / improvements
   - Fix crash in GEOSUnaryUnion with empty LineString
@@ -12,6 +12,7 @@ Changes in 3.6.4
   - Static library does not contain C API (#878)
   - Prevent crash when querying empty STRtree (#730)
   - Overlay performance improvement (#986, Paul Ramsey)
+  - Relate crash with empty components (#1085, Sandro Santilli)
 
 
 Changes in 3.6.3
