--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,8 @@ Changes in 3.10.0
 2020-xx-xx
 
 - New things:
-
+  - Output WKT using positional precision with the ryu 
+    library (#868, Paul Ramsey)
 
 
 Changes in 3.9.0
