--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,9 @@ Changes in 3.10.0
 2020-xx-xx
 
 - New things:
-  - Output WKT using positional precision with the ryu 
+  - Output WKT using positional precision with the ryu
     library (#868, Paul Ramsey)
+  - geosop CLI for GEOS (Martin Davis)
 
 
 Changes in 3.9.0
@@ -724,4 +725,3 @@ Changes in 2.0.0
   been dropped. You have to use GeometryFactory instead.
 - WKTWriter default constructor has been dropped. You need
   to initialize it with an explicit GeometryFactory
-
