--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Changes in 3.10.0
   - Output WKT using positional precision with the ryu
     library (#868, Paul Ramsey)
   - geosop CLI for GEOS (Martin Davis)
+  - Full doxygen of the C-API (Paul Ramsey)
 
 
 Changes in 3.9.0
