--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Changes in 3.10.0
   - geosop CLI for GEOS (Martin Davis)
   - Full doxygen of the C-API (Paul Ramsey)
 
+- Improvements:
+  - Preserve ordering of lines in overlay results (Martin Davis)
 
 Changes in 3.9.0
 2020-12-09
