--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.9.1
   - Windows memory management quirk in createPolygon CAPI (#1050, Paul Ramsey)
   - Allow build on Apple ARM64 (Taras Zakharko)
   - Fix buffer to use largest enclosed area for invalid rings (#732, Paul Ramsey)
+  - Preserve ordering of lines in overlay results (Martin Davis)
 
 
 
