--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.10.0
     library (#868, Paul Ramsey)
   - geosop CLI for GEOS (Martin Davis)
   - Full doxygen of the C-API (Paul Ramsey)
+  - CAPI: GEOSDensify (Brendan Ward)
 
 - Improvements:
   - Preserve ordering of lines in overlay results (Martin Davis)
